docs(all): change  license
Example Change the MIT license to the Apache licence 2.0